@@ -19,9 +19,11 @@
 package org.apache.tajo.validation;
 
 public class PathValidator extends PatternValidator {
+  static final String PATH_REGEXP_PATTERN =
+      "^(?:[a-zA-Z][a-zA-Z0-9+-.]+:[/]{1,2}[a-zA-Z-.]*[:0-9]*)?(?:/?[a-zA-Z]:)?[/a-zA-Z0-9-_\\\\.\\\\$\\\\{\\\\}]*$";
 
   public PathValidator() {
-    super("^(?:[a-zA-Z][a-zA-Z0-9+-.]+:[/]{1,2}[a-zA-Z-.]*[:0-9]*)?(?:/?[a-zA-Z]:)?[/a-zA-Z0-9-_\\\\.\\\\$\\\\{\\\\}]*$");
+    super(PATH_REGEXP_PATTERN);
   }
 
   @Override
